<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestyMaturalneActivity!</string>
    <string name="app_name">Testy Maturalne</string>
    <string name="przykladowe_pytanie">Ile wynosi x?</string>
    <string name="sprawdz">Sprawdź</string>
    <string name="poprzednie">Poprzednie</string>
    <string name="nastepne">Następne</string>
    <string name="blank"></string>
    <string name="a">" A.  "</string>
    <string name="b">" B.  "</string>
    <string name="c">" C.  "</string>
    <string name="d">" D.  "</string>
    <string name="pytania_maturalne">Pytania maturalne</string>
    <string name="statystyki">Statystyki</string>
    <string name="info">Informacje</string>
    <string name="do_matury">Do matury pozostało:</string>
    <string name="odliczanie">20 dni</string>
    <string name="wynik">"Wynik: "</string>
    <string name="poprawne">Poprawne: </string>
    <string name="zrobione">Przerobione: </string>
    <string name="reset_stat">Wyczyść statystyki</string>
    <string name="stat_graph">&lt;miejsce na wykres></string>
    <string name="info_tresc">Przepraszam, że aplikacja wygląda jak wygląda ale spieszyłem się żeby zdązyć przed maturą z matematyki :) Skupiam się teraz głównie na dodawaniu nowych pytań + szybkie poprawki. Powodzenia na maturze!</string>
    <string name="kontakt">Wyślij do mnie e-maila</string>

</resources>