<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:src="@drawable/title" />

        <Button
            android:id="@+id/btn_przegladaj"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:text="@string/pytania_maturalne" />

        <Button
            android:id="@+id/btn_statystyki"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_przegladaj"
            android:layout_centerHorizontal="true"
            android:text="@string/statystyki" />

        <Button
            android:id="@+id/btn_info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_statystyki"
            android:layout_below="@+id/btn_statystyki"
            android:text="@string/info" />

        <TextView
            android:id="@+id/tv_zostalo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btn_info"
            android:text="@string/do_matury"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#abafff"
            android:shadowColor="#3a3a3a"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tv_zostalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_zostalo_text"
            android:text="@string/odliczanie"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#abafff"
            android:shadowColor="#3a3a3a"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:gravity="center" />

        <ImageView
            android:id="@+id/btn_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_zostalo"
            android:src="@drawable/web_hi_res_512_premium" />

    </RelativeLayout>

</LinearLayout>