<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="8dp" >

    <ScrollView
        android:id="@+id/scrollLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/staty_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/staty" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_poprawne_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/poprawne"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />

                <TextView
                    android:id="@+id/tv_poprawne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="0/0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />

                <TextView
                    android:id="@+id/tv_poprawne_proc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="(0%)"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_przerobione_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zrobione"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />

                <TextView
                    android:id="@+id/tv_przerobione"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="0/0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />

                <TextView
                    android:id="@+id/tv_przerobione_proc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3a3a3a"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="(0%)"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#424242" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/poprawne"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp" />

                <WebView
                    android:id="@+id/przerobione"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/btn_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="false"
                        android:text="@string/reset_stat" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>